argocd/ingress-argocd.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-argocd
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    alb.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: argocd.cluster.local
      http:
        paths:
          # - path: /argocd(/|$)(.*)
          #  pathType: ImplementationSpecific
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
        ## paths:
        ##   - path: /
        ##     pathType: Prefix
        ##     backend:
        ##       service:
        ##         name: service-node-express
        ##         port:
        ##           number: 4000
